# XLEX

./: .gitignore  CMakeLists.txt  README.md  dfa.hpp  globals.h  main.cpp  mdfa.hpp  nfa.hpp
result.dSYM/Contents/Resources/DWARF/: result
result.dSYM/Contents/Resources/Relocations/aarch64/: result.yml
